--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
+    "google-auth-library": "^10.3.0",
+    "googleapis": "^160.0.0",
     "helmet": "^7.1.0",
     "mammoth": "^1.6.0",
     "morgan": "^1.10.0",
@@ -26,11 +28,11 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@types/express": "^4.17.23",
     "@types/jest": "^29.5.8",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.19.13",
+    "@types/node": "^20.19.17",
     "@types/pdf-parse": "^1.1.5",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
